chore: use non-deprecated PluginUtilsService